# version-updater

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  Readme.md  config.yml  version.yml
src/: config.rs  error.rs  git.rs  logging.rs  main.rs  registry.rs  service.rs
