[package]
name = "version_checker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
bollard = { version = "0.18.1", features = ["ssl"] }
clap = { version = "4.5.28", features = ["derive"] }
dirs = "6.0.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
thiserror = "2.0.0"
tokio = { version = "1.43.0", features = ["full"] }
env_logger = "0.10"
log = "0.4"
chrono = "0.4.39"
